--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "ryanair-techical-fe-test",
     "version": "0.0.1",
     "scripts": {
-        "start": "npm run lite",
-        "lite": "lite-server"
+        "start": "webpack-dev-server --inline --progress --port 8080",
+        "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+        "postinstall": "typings install",
+        "test": "karma start"
     },
     "licenses": [{
         "type": "UNLICENSED",
@@ -23,12 +25,22 @@
         "angular-in-memory-web-api": "~0.1.5",
         "bootstrap": "^3.3.7",
         "core-js": "^2.4.1",
-        "reflect-metadata": "^0.1.8",
         "rxjs": "5.0.0-beta.12",
         "zone.js": "^0.6.25"
     },
     "devDependencies": {
         "concurrently": "^3.0.0",
-        "lite-server": "^2.2.2"
+        "jasmine-core": "^2.4.1",
+        "karma": "^1.2.0",
+        "karma-jasmine": "^1.0.2",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^1.8.0",
+        "null-loader": "^0.1.1",
+        "typescript": "^2.0.3",
+        "typings": "^1.4.0",
+        "webpack": "^1.13.2",
+        "webpack-dev-server": "^1.16.2",
+        "webpack-merge": "^0.15.0"
     }
 }
