--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
         "@angular/router": "~3.1.0",
         "@angular/upgrade": "~2.1.0",
 
-        "angular-in-memory-web-api": "~0.1.5",
         "bootstrap": "^3.3.7",
         "core-js": "^2.4.1",
         "rxjs": "5.0.0-beta.12",
         "zone.js": "^0.6.25"
     },
     "devDependencies": {
-        "concurrently": "^3.0.0",
+        "angular2-template-loader": "^0.4.0",
+        "awesome-typescript-loader": "^2.2.4",
+        "css-loader": "^0.23.1",
+        "extract-text-webpack-plugin": "^1.0.1",
+        "file-loader": "^0.8.5",
+        "html-loader": "^0.4.3",
+        "html-webpack-plugin": "^2.15.0",
         "jasmine-core": "^2.4.1",
         "karma": "^1.2.0",
         "karma-jasmine": "^1.0.2",
@@ -37,6 +42,10 @@
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^1.8.0",
         "null-loader": "^0.1.1",
+        "phantomjs-prebuilt": "^2.1.7",
+        "raw-loader": "^0.5.1",
+        "rimraf": "^2.5.2",
+        "style-loader": "^0.13.1",
         "typescript": "^2.0.3",
         "typings": "^1.4.0",
         "webpack": "^1.13.2",
