Try to use Material Design grid system

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "~2.1.0",
     "@angular/forms": "~2.1.0",
     "@angular/http": "~2.1.0",
+    "@angular/material": "^2.0.0-alpha.9-3",
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
@@ -26,6 +27,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng2-auto-complete": "^0.7.4",
+    "ng2-completer": "^0.2.2",
     "ng2-typeahead": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
@@ -44,6 +46,8 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
