--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@angular/upgrade": "~2.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "moment": "^2.15.1",
     "ng2-auto-complete": "^0.7.4",
+    "ng2-bootstrap": "^1.1.14",
     "ng2-completer": "^0.2.2",
+    "ng2-datepicker": "^1.1.1",
     "ng2-typeahead": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
